force-app/main/default/objects/Avaya_Agent__c/Avaya_Agent__c.object-meta.xml
<CustomObject>
    <description>Report Avaya Agent</description>
    <label>Avaya Agent</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avaya Agent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>