force-app/main/default/objects/Avaya_Agent__c/fields/Agent_Group__c.field-meta.xml
<CustomField>
    <fullName>Agent_Group__c</fullName>
    <label>Agent Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent Group 01</fullName>
            </value>
            <value>
                <fullName>Agent Group 02</fullName>
            </value>
            <value>
                <fullName>Agent Group 03</fullName>
            </value>
            <value>
                <fullName>Agent Group 04</fullName>
            </value>
            <value>
                <fullName>Agent Group 05</fullName>
            </value>
            <value>
                <fullName>Banking Jkt</fullName>
            </value>
            <value>
                <fullName>Banking Semarang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>