force-app/main/default/objects/Avaya_Agent__c/fields/AUX_Isi_Form__c.field-meta.xml
<CustomField>
    <fullName>AUX_Isi_Form__c</fullName>
    <label>AUX Isi Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>