force-app/main/default/objects/Avaya_Agent__c/fields/AUX_Rest_Room__c.field-meta.xml
<CustomField>
    <fullName>AUX_Rest_Room__c</fullName>
    <label>AUX Rest Room</label>
    <length>255</length>
    <type>Text</type>
</CustomField>