force-app/main/default/objects/Avaya_Agent__c/fields/AUX_Sholat__c.field-meta.xml
<CustomField>
    <fullName>AUX_Sholat__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AUX Sholat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>