force-app/main/default/objects/Avaya_Agent__c/fields/Avail_Time__c.field-meta.xml
<CustomField>
    <fullName>Avail_Time__c</fullName>
    <label>Avail Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>