force-app/main/default/objects/Avaya_Agent__c/fields/Login_ID__c.field-meta.xml
<CustomField>
    <fullName>Login_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Login ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>