force-app/main/default/objects/Avaya_Agent__c/fields/Staffed_Time__c.field-meta.xml
<CustomField>
    <fullName>Staffed_Time__c</fullName>
    <label>Staffed Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>